<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.pisoo.raaye7.MapsActivity"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
         >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/whiteTransparent"
            android:layout_marginRight="50dp"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="From :   "
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textStyle="bold"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/search"
                android:id="@+id/dt_from"
                android:textSize="22sp"
                android:textColor="@color/initTextColor"
                android:background="@drawable/custom_edittext"
                android:maxLines="1"
                android:focusable="false" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/whiteTransparent"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="To      :  "
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/search"
                android:id="@+id/dt_To"
                android:paddingLeft="5dp"
                android:textSize="22sp"
                android:textColor="@color/initTextColor"
                android:background="@drawable/custom_edittext"
                android:maxLines="1"
                android:focusable="false" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/whiteTransparent"
            android:padding="5dp"
            android:id="@+id/ll_time"
            android:animateLayoutChanges="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tripTime"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_TimeText"
                android:text="@string/initdate"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp"
                android:textStyle="bold"/>

        </LinearLayout>

    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/TakeMycar"
                android:id="@+id/bt_TakeMyCar"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:textColor="#ffffff"
                android:textAllCaps="false"
                android:background="@drawable/custom_takemycar_button"/>
            <Button
                android:layout_margin="5dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/RequestPickup"
                android:id="@+id/bt_RequestPickup"
                android:textAllCaps="false"
                android:layout_weight="1"
                android:background="@drawable/custom_pickup_button"
                android:textColor="@color/colorPrimary"/>
        </LinearLayout>




</RelativeLayout>

